test/corpus/bind_alias_poly.txt
================================================================================
bind-alias simple
================================================================================

(bind-alias cairo_t i8)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)))

================================================================================
bind-alias closure type
================================================================================

(bind-alias cairo_destroy_func_t [void,i8*]*)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)))

================================================================================
bind-alias boolean
================================================================================

(bind-alias cairo_bool_t i1)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)))

================================================================================
bind-poly two functions
================================================================================

(bind-poly note_gate note_gate_get)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)))

================================================================================
bind-poly with docstring
================================================================================

(bind-poly bindfuncpoly_with_docstring bindfunc "polydoc")

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)
    (string)))

================================================================================
bind-poly pair
================================================================================

(bind-poly note_gate note_gate_get)
(bind-poly note_gate note_gate_set)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol))
  (list
    (symbol)
    (symbol)
    (symbol)))
