test/corpus/bind_data.txt
================================================================================
bind-data with two constructors
================================================================================

(bind-data ADPoint{!a}
           (ADPoint2D !a !a)
           (ADPoint3D !a !a !a))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (list
      (symbol)
      (symbol)
      (symbol))
    (list
      (symbol)
      (symbol)
      (symbol)
      (symbol))))

================================================================================
bind-data with nested types
================================================================================

(bind-data ADShape{!a}
           (ADCircle ADPoint{!a}* !a)
           (ADRect ADPoint{!a}* !a !a))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (list
      (symbol)
      (symbol)
      (symbol))
    (list
      (symbol)
      (symbol)
      (symbol)
      (symbol))))

================================================================================
bind-data either type
================================================================================

(bind-data ADEither{!a,!b}
           (ADLeft !a)
           (ADRight !b))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (unquote
      (symbol))
    (list
      (symbol)
      (symbol))
    (list
      (symbol)
      (symbol))))

================================================================================
bind-data list monad
================================================================================

(bind-data ADList{!a}
           (ADNil)
           (ADCons !a ADList{!a}*))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (list
      (symbol))
    (list
      (symbol)
      (symbol)
      (symbol))))

================================================================================
bind-data simple pair
================================================================================

(bind-data ADPair{!a} (ADPair !a !a))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (list
      (symbol)
      (symbol)
      (symbol))))

================================================================================
bind-data option type
================================================================================

(bind-data ADOption{!a}
           (ADSome !a)
           (ADNone))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (list
      (symbol)
      (symbol))
    (list
      (symbol))))
