test/corpus/bind_type.txt
================================================================================
bind-type with tuple
================================================================================

(bind-type vec3 <double,double,double>)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)
    (unquote
      (symbol))
    (unquote
      (symbol))))

================================================================================
bind-type with generic parameters
================================================================================

(bind-type Point <!a,!a>)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)
    (unquote
      (symbol))))

================================================================================
bind-type with generic pair
================================================================================

(bind-type Pair <!a,!b>)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)
    (unquote
      (symbol))))

================================================================================
bind-type with recursive type
================================================================================

(bind-type List <!a,List*>)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)
    (unquote
      (symbol))))

================================================================================
bind-type with named pointer
================================================================================

(bind-type AudioBuffer <i64,i64,double*>)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)
    (unquote
      (symbol))
    (unquote
      (symbol))))

================================================================================
bind-type with array member
================================================================================

(bind-type Matrix4 <|16,float|>)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)
    (unquote
      (symbol))))

================================================================================
bind-type simple no commas
================================================================================

(bind-type Opaque i8)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)))
