test/corpus/bind_val.txt
================================================================================
bind-val with integer type
================================================================================

(bind-val g_var i32 5)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)
    (number)))

================================================================================
bind-val with float
================================================================================

(bind-val PI double 3.14159265358979)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)
    (number)))

================================================================================
bind-val with no initial value
================================================================================

(bind-val buffer i8*)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)))

================================================================================
bind-val with typed literal
================================================================================

(bind-val count i64 0)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)
    (number)))

================================================================================
bind-val with string
================================================================================

(bind-val name String* "hello")

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)
    (string)))

================================================================================
bind-val pointer type
================================================================================

(bind-val data |4,float|*)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)
    (unquote
      (symbol))))
