test/corpus/block_comments.txt
================================================================================
simple block comment
================================================================================

#| this is a block comment |#

--------------------------------------------------------------------------------

(program
  (block_comment))

================================================================================
block comment with code around it
================================================================================

(define x 1)
#| commented out |#
(define y 2)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (number))
  (block_comment)
  (list
    (symbol)
    (symbol)
    (number)))

================================================================================
multiline block comment
================================================================================

#|
this spans
multiple lines
|#

--------------------------------------------------------------------------------

(program
  (block_comment))

================================================================================
nested block comment
================================================================================

#| outer #| inner |# still outer |#

--------------------------------------------------------------------------------

(program
  (block_comment
    (block_comment)))

================================================================================
block comment with code inside
================================================================================

#|
(define x 42)
(println x)
|#

--------------------------------------------------------------------------------

(program
  (block_comment))
