test/corpus/comments.txt
================================================================================
line comment
================================================================================

; this is a comment

--------------------------------------------------------------------------------

(program
  (comment))

================================================================================
double semicolon comment
================================================================================

;; this is a comment

--------------------------------------------------------------------------------

(program
  (comment))

================================================================================
triple semicolon comment
================================================================================

;;; section header

--------------------------------------------------------------------------------

(program
  (comment))

================================================================================
comment after expression
================================================================================

(+ 1 2) ; add numbers

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (number)
    (number))
  (comment))

================================================================================
hashbang comment
================================================================================

#! this is a hashbang comment

--------------------------------------------------------------------------------

(program
  (comment))

================================================================================
multiple comments
================================================================================

; first
;; second
;;; third

--------------------------------------------------------------------------------

(program
  (comment)
  (comment)
  (comment))

================================================================================
comment with code
================================================================================

; (define x 42)
(define y 10)

--------------------------------------------------------------------------------

(program
  (comment)
  (list
    (symbol)
    (symbol)
    (number)))

================================================================================
inline comment separator
================================================================================

;;;;;;;;;;;;;;;;;;;;;;;
;; section
;;;;;;;;;;;;;;;;;;;;;;;

--------------------------------------------------------------------------------

(program
  (comment)
  (comment)
  (comment))

================================================================================
comment with special chars
================================================================================

;; TODO: fix this! [important] {urgent}

--------------------------------------------------------------------------------

(program
  (comment))
