test/corpus/dotted_pairs.txt
================================================================================
simple dotted pair
================================================================================

(a . b)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)))

================================================================================
dotted pair in alist
================================================================================

((key . value))

--------------------------------------------------------------------------------

(program
  (list
    (list
      (symbol)
      (symbol))))

================================================================================
dotted pair with numbers
================================================================================

(1 . 2)

--------------------------------------------------------------------------------

(program
  (list
    (number)
    (number)))

================================================================================
improper list
================================================================================

(a b c . d)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)
    (symbol)))

================================================================================
rest args in lambda
================================================================================

(define-macro (my-macro x . rest)
  rest)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (symbol)
      (symbol)
      (symbol))
    (symbol)))

================================================================================
nested dotted pair
================================================================================

((a . 1) (b . 2))

--------------------------------------------------------------------------------

(program
  (list
    (list
      (symbol)
      (number))
    (list
      (symbol)
      (number))))

================================================================================
dotted pair with quoted value
================================================================================

(^42 . 'ionian)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (quote
      (symbol))))

================================================================================
dotted pair with list value
================================================================================

(^42 . (11 0 4 7))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (number)
      (number)
      (number)
      (number))))
