test/corpus/literals.txt
================================================================================
integer literals
================================================================================

42
0
-1
+5

--------------------------------------------------------------------------------

(program
  (number)
  (number)
  (number)
  (number))

================================================================================
float literals
================================================================================

3.14
-2.5
1.0
.5
0.0

--------------------------------------------------------------------------------

(program
  (number)
  (number)
  (number)
  (number)
  (number))

================================================================================
scientific notation
================================================================================

1e10
1.5e-3
2.0E+4

--------------------------------------------------------------------------------

(program
  (number)
  (number)
  (number))

================================================================================
hex literals
================================================================================

#xDEAD
#xFF
#x0
#XAB

--------------------------------------------------------------------------------

(program
  (number)
  (number)
  (number)
  (number))

================================================================================
binary literals
================================================================================

#b1010
#b0
#B11111111

--------------------------------------------------------------------------------

(program
  (number)
  (number)
  (number))

================================================================================
octal literals
================================================================================

#o755
#o0
#O177

--------------------------------------------------------------------------------

(program
  (number)
  (number)
  (number))

================================================================================
decimal prefix
================================================================================

#d255

--------------------------------------------------------------------------------

(program
  (number))

================================================================================
rational literal
================================================================================

3/4
1/2
-7/3

--------------------------------------------------------------------------------

(program
  (number)
  (number)
  (number))

================================================================================
typed integer literals
================================================================================

5:i64
0:i32
-1:i8

--------------------------------------------------------------------------------

(program
  (number)
  (number)
  (number))

================================================================================
typed float literals
================================================================================

3.0:f
1.0:float
2.5:double
0.0:f32

--------------------------------------------------------------------------------

(program
  (number)
  (number)
  (number)
  (number))

================================================================================
boolean literals
================================================================================

#t
#f
#T
#F

--------------------------------------------------------------------------------

(program
  (boolean)
  (boolean)
  (boolean)
  (boolean))

================================================================================
string literal
================================================================================

"hello world"

--------------------------------------------------------------------------------

(program
  (string))

================================================================================
string with escapes
================================================================================

"hello\nworld\t\"quoted\""

--------------------------------------------------------------------------------

(program
  (string
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)))

================================================================================
string with hex escape
================================================================================

"byte: \x41"

--------------------------------------------------------------------------------

(program
  (string
    (escape_sequence)))

================================================================================
empty string
================================================================================

""

--------------------------------------------------------------------------------

(program
  (string))

================================================================================
character literals
================================================================================

#\a
#\Z
#\space
#\newline
#\tab
#\return

--------------------------------------------------------------------------------

(program
  (character)
  (character)
  (character)
  (character)
  (character)
  (character))

================================================================================
character hex literal
================================================================================

#\x41

--------------------------------------------------------------------------------

(program
  (character))

================================================================================
vector literal
================================================================================

#(1 2 3)

--------------------------------------------------------------------------------

(program
  (vector
    (number)
    (number)
    (number)))

================================================================================
nested vector
================================================================================

#(1 "two" #t)

--------------------------------------------------------------------------------

(program
  (vector
    (number)
    (string)
    (boolean)))

================================================================================
signed radix literals
================================================================================

#x-ff #b-101 #o-17 #d-99 #x+1a

--------------------------------------------------------------------------------

(program
  (number)
  (number)
  (number)
  (number)
  (number))

================================================================================
strings survive unknown escapes and line continuations
================================================================================

(display "h\qi")
"line\
continued"

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (string
      (escape_sequence)))
  (string
    (escape_sequence)))

================================================================================
s7 string escapes: \b \f \/ \| and multi-digit hex
================================================================================

"a\bb\fc\/d\|e\x41f\x263a;"

--------------------------------------------------------------------------------

(program
  (string
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)))
