test/corpus/named_types.txt
================================================================================
named type annotation (let binding)
================================================================================

(let ((nk:NOTE_KERNEL null)) nk)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (list
        (typed_identifier
          (symbol)
          (type_annotation))
        (symbol)))
    (symbol)))

================================================================================
named type annotation (lambda arg)
================================================================================

(lambda (x:Point) x)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (typed_identifier
        (symbol)
        (type_annotation)))
    (symbol)))

================================================================================
named type with pointer
================================================================================

(lambda (s:SAMPLE*) s)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (typed_identifier
        (symbol)
        (type_annotation)))
    (symbol)))

================================================================================
named generic type with pointer
================================================================================

(lambda (l:List{!a}*) l)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (typed_identifier
        (symbol)
        (type_annotation)))
    (symbol)))

================================================================================
namespaced scheme symbol is not a type (lowercase prefix)
================================================================================

(xtc:aot foo)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)))

================================================================================
sys:platform remains a symbol
================================================================================

(sys:platform)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)))
