test/corpus/quoting.txt
================================================================================
quote symbol
================================================================================

'hello

--------------------------------------------------------------------------------

(program
  (quote
    (symbol)))

================================================================================
quote list
================================================================================

'(1 2 3)

--------------------------------------------------------------------------------

(program
  (quote
    (list
      (number)
      (number)
      (number))))

================================================================================
quasiquote with unquote
================================================================================

`(a ,b c)

--------------------------------------------------------------------------------

(program
  (quasiquote
    (list
      (symbol)
      (unquote
        (symbol))
      (symbol))))

================================================================================
quasiquote with splicing
================================================================================

`(a ,@rest)

--------------------------------------------------------------------------------

(program
  (quasiquote
    (list
      (symbol)
      (unquote_splicing
        (symbol)))))

================================================================================
nested quasiquote
================================================================================

`(if ,pred (begin ,@body))

--------------------------------------------------------------------------------

(program
  (quasiquote
    (list
      (symbol)
      (unquote
        (symbol))
      (list
        (symbol)
        (unquote_splicing
          (symbol))))))

================================================================================
quoted string
================================================================================

'hello

--------------------------------------------------------------------------------

(program
  (quote
    (symbol)))

================================================================================
quote boolean
================================================================================

'#t

--------------------------------------------------------------------------------

(program
  (quote
    (boolean)))

================================================================================
quote number
================================================================================

'42

--------------------------------------------------------------------------------

(program
  (quote
    (number)))

================================================================================
unquote in list
================================================================================

(list 'a 'b 'c)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (quote
      (symbol))
    (quote
      (symbol))
    (quote
      (symbol))))

================================================================================
double quote
================================================================================

''x

--------------------------------------------------------------------------------

(program
  (quote
    (quote
      (symbol))))

================================================================================
quote separated from its datum by a comment
================================================================================

'  ;; a comment in the way
  foo

--------------------------------------------------------------------------------

(program
  (quote
    (comment)
    (symbol)))

================================================================================
quasiquote and unquote across comment lines
================================================================================

`(a ,
   ;; comment
   b)

--------------------------------------------------------------------------------

(program
  (quasiquote
    (list
      (symbol)
      (unquote
        (comment)
        (symbol)))))
