test/corpus/reader_edge_cases.txt
================================================================================
quote-suffixed symbol (single-quoted word)
================================================================================

(name 'FMSynth')

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (quote
      (symbol))))

================================================================================
single-character quoted symbol
================================================================================

(f '_')

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (quote
      (symbol))))

================================================================================
hash inside a symbol (musical note name)
================================================================================

(define c#0 5)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (number)))

================================================================================
hash inside a symbol (chord name in dotted pair)
================================================================================

(^7#4 . (0 4 7 11 6))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (number)
      (number)
      (number)
      (number)
      (number))))

================================================================================
leading quote is still a quote form
================================================================================

'foo

--------------------------------------------------------------------------------

(program
  (quote
    (symbol)))

================================================================================
sharp forms still win at token start
================================================================================

(list #t #f #\a #\space #(1 2))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (boolean)
    (boolean)
    (character)
    (character)
    (vector
      (number)
      (number))))

================================================================================
comparison <= does not run forward into a later > (scanner overrun guard)
================================================================================

(if (<= x 1) y (> a b))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (symbol)
      (symbol)
      (number))
    (symbol)
    (list
      (symbol)
      (symbol)
      (symbol))))

================================================================================
bracket char with whitespace is not a type, across forms
================================================================================

(bind-func f (lambda (x) (< x 0)))
(bind-func g (lambda (y) (> y 0)))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (list
      (symbol)
      (list
        (symbol))
      (list
        (symbol)
        (symbol)
        (number))))
  (list
    (symbol)
    (symbol)
    (list
      (symbol)
      (list
        (symbol))
      (list
        (symbol)
        (symbol)
        (number)))))

================================================================================
real bracket type is still recognised next to ordinary code
================================================================================

(bind-func f:[i64,i64]* (lambda (x) x))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (typed_identifier
      (symbol)
      (type_annotation))
    (list
      (symbol)
      (list
        (symbol))
      (symbol))))
