test/corpus/sharp_constants.txt
================================================================================
builtin reference: #_format (used in init.xtm)
================================================================================

(#_format #f "~S" info)

--------------------------------------------------------------------------------

(program
  (list
    (sharp_constant)
    (boolean)
    (string)
    (symbol)))

================================================================================
long booleans are sharp constants, short ones stay booleans
================================================================================

#t #f #true #false

--------------------------------------------------------------------------------

(program
  (boolean)
  (boolean)
  (sharp_constant)
  (sharp_constant))

================================================================================
printed constants: #<eof> and #<unspecified>
================================================================================

(eq? x #<eof>)
#<unspecified>

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (sharp_constant))
  (sharp_constant))

================================================================================
typed vector prefixes read as sharp constant plus list
================================================================================

#i(1 2 3)
#u8(255 0)
#2d((1 2) (3 4))

--------------------------------------------------------------------------------

(program
  (sharp_constant)
  (list
    (number)
    (number)
    (number))
  (sharp_constant)
  (list
    (number)
    (number))
  (sharp_constant)
  (list
    (list
      (number)
      (number))
    (list
      (number)
      (number))))

================================================================================
radix literals win exact-length ties, longer atoms fall through
================================================================================

#x1F #x1.8

--------------------------------------------------------------------------------

(program
  (number)
  (sharp_constant))

================================================================================
sharp constants can be quoted
================================================================================

'#_car

--------------------------------------------------------------------------------

(program
  (quote
    (sharp_constant)))
