test/corpus/special_forms.txt
================================================================================
dotimes loop
================================================================================

(dotimes (i 10)
  (println i))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (symbol)
      (number))
    (list
      (symbol)
      (symbol))))

================================================================================
memzone allocation
================================================================================
